Atualização das visualizações

--- a/evoluction_of_production_states.ipynb
+++ b/evoluction_of_production_states.ipynb
@@ -1490,8 +1490,7 @@
         "variavel = 'Petróleo (bbl/dia)'\n",
         "plot_mult_line(dataset_estados, estados, variavel)\n",
         "\n",
-        "estados = dataset[\"Estado\"].unique()\n",
-        "variavel = 'Gás Natural (Mm³/dia)'\n",
+        "variavel = 'Gás Natural_total (Mm³/dia)'\n",
         "#plot_mult_line(dataset_estados, estados, variavel)"
       ]
     },
@@ -1567,7 +1566,6 @@
         "variavel = 'Gás Natural (Mm³/dia)'\n",
         "dataset_estado = dataset_estados.rename({'Gás Natural_total (Mm³/dia)': variavel}, axis = 1)\n",
         "df_estado_choropleth = dataset_estados[['Período', 'Estados', variavel]]\n",
-        "\n",
         "#choropleth(df_estado_choropleth, variavel)"
       ]
     },
